# xDuinoRails_MotorControl_bEMF

./: .gitignore  AGENTS.md  CONTRIBUTING.de.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Doxyfile  README.md  ROADMAP.md  platformio.ini  readme.md
.github/workflows/: build-test-package.yml  build.yml
docs/: ADAFRUIT_FEATHER_NRF52832.de.md  ADAFRUIT_FEATHER_NRF52832.en.md  ADAFRUIT_FEATHER_NRF52840.de.md  ADAFRUIT_FEATHER_NRF52840.en.md  ARDUINO_UNO.de.md  ARDUINO_UNO.en.md  BEMF_MEASUREMENT_TECHNIQUES.en.md  CORE_CONCEPTS.de.md  CORE_CONCEPTS.en.md  DEVELOPER_REFERENCE.de.md  DEVELOPER_REFERENCE.en.md  HARDWARE_CONTROL.de.md  HARDWARE_CONTROL.en.md  HOW_TO_USE.de.md  HOW_TO_USE.en.md  MOTOR_DRIVER_ICS.de.md  MOTOR_DRIVER_ICS.md  NUCLEO_F446RE.de.md  NUCLEO_F446RE.en.md  NUCLEO_G431RB.de.md  NUCLEO_G431RB.en.md  PWM_FREQUENCIES.de.md  PWM_FREQUENCIES.en.md  SEEED_XIAO_ESP32C3.de.md  SEEED_XIAO_ESP32C3.md  SEEED_XIAO_ESP32S3.de.md  SEEED_XIAO_ESP32S3.en.md  SEEED_XIAO_RP2040.de.md  SEEED_XIAO_RP2040.en.md  SEEED_XIAO_SAMD21.de.md  SEEED_XIAO_SAMD21.en.md  TECHNICAL_DEBTS.de.md  TECHNICAL_DEBTS.en.md  TESTING_IMPROVEMENTS.de.md  TESTING_IMPROVEMENTS.en.md  USER_MANUAL.de.md  USER_MANUAL.en.md  seeed_xiao_rp2040.md
examples/FiftyPercent/: README.md  (+1 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: main.rs
simulation/: README.md  motor.net  motor_1s.net  motor_stalled.net  run_sim.py
src/: StatusLED.cpp  main.ino  motor_control_hal_esp32.cpp  motor_control_hal_nrf52833.cpp  motor_control_hal_rp2040.cpp  motor_control_hal_samd21.cpp  motor_control_hal_stm32.cpp
(+23 files in other folders)
